Refactor codebase: extract records, unify logging, and modernize file I/O
- Extract nested records (ResolvedDependency, ArtifactSpec, PomDependency) to top-level classes
- Introduce Logger utility for unified output handling
- Modernize FileUtils to use java.nio.file API
- Refactor PomParser to improve XML dependency parsing
- Centralize constants in Constants.java
- Fix TestRunner execution issues (reflection access, class loading)
- Update consumers (DependencyResolver, MavenClient, etc.) to use new structures