@@ -11,57 +11,81 @@ import java.util.stream.Stream;
 
 public class FileUtils {
 
-  public static void ensureDirectory(File dir) {
-    if (!dir.exists()) {
-      dir.mkdirs();
+  public static void ensureDirectory(Path path) throws IOException {
+    if (!Files.exists(path)) {
+      Files.createDirectories(path);
     }
   }
 
-  public static void ensureDirectory(String path) {
-    ensureDirectory(new File(path));
+  public static void ensureDirectory(File dir) throws IOException {
+    ensureDirectory(dir.toPath());
   }
 
-  public static void deleteDirectory(File dir) throws IOException {
-    if (!dir.exists()) {
+  public static void ensureDirectory(String path) throws IOException {
+    ensureDirectory(Path.of(path));
+  }
+
+  public static void deleteDirectory(Path path) throws IOException {
+    if (!Files.exists(path)) {
       return;
     }
 
     // Collect all paths first to enable parallel deletion for large directories
     List<Path> paths;
-    try (Stream<Path> stream = Files.walk(dir.toPath())) {
+    try (Stream<Path> stream = Files.walk(path)) {
       paths = stream.sorted(Comparator.reverseOrder()).toList();
     }
 
     // Use parallel deletion for large directories (> 100 files)
     if (paths.size() > 100) {
-      paths.parallelStream().map(Path::toFile).forEach(File::delete);
+      paths.parallelStream().forEach(p -> {
+        try {
+          Files.delete(p);
+        } catch (IOException e) {
+          throw new RuntimeException(e);
+        }
+      });
     } else {
-      paths.forEach(path -> path.toFile().delete());
+      for (Path p : paths) {
+        Files.delete(p);
+      }
     }
+  }
+
+  public static void deleteDirectory(File dir) throws IOException {
+    deleteDirectory(dir.toPath());
   }
 
   public static void deleteDirectory(String path) throws IOException {
-    deleteDirectory(new File(path));
+    deleteDirectory(Path.of(path));
   }
 
-  public static void writeFile(File file, String content) throws IOException {
-    File parent = file.getParentFile();
+  public static void writeFile(Path path, String content) throws IOException {
+    Path parent = path.getParent();
     if (parent != null) {
       ensureDirectory(parent);
     }
-    Files.write(file.toPath(), content.getBytes(StandardCharsets.UTF_8));
+    Files.writeString(path, content, StandardCharsets.UTF_8);
+  }
+
+  public static void writeFile(File file, String content) throws IOException {
+    writeFile(file.toPath(), content);
   }
 
   public static void writeFile(String path, String content) throws IOException {
-    writeFile(new File(path), content);
+    writeFile(Path.of(path), content);
+  }
+
+  public static String readFile(Path path) throws IOException {
+    return Files.readString(path, StandardCharsets.UTF_8);
   }
 
   public static String readFile(File file) throws IOException {
-    return new String(Files.readAllBytes(file.toPath()), StandardCharsets.UTF_8);
+    return readFile(file.toPath());
   }
 
   public static String readFile(String path) throws IOException {
-    return readFile(new File(path));
+    return readFile(Path.of(path));
   }
 
   public static File getJpmHome() {
